...
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mAddPlaceLayout"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_add_property"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_add_property_name"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_add_property"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_add_description"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_add_property_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_add_address"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_add_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_add_city"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_add_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_add_state"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_add_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_price"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_add_state"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:padding="16dp"
        android:background="@drawable/ripple"
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btn_property_add"
        android:text="@string/add_property"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
...
