<resources>
    <string name="app_name">RV-Camping</string>
    <string name="reserve">RESERVE</string>
    <string name="this_place_is_amazing_that_sits_at_top_of_the_mountain_so_you_can_learn_how_to_fly">This place is amazing that sits at top of the mountain so you can learn how to fly</string>
    <string name="pick_date_from">pick date from</string>
    <string name="to">TO</string>
    <string name="pick_date_to">pick date to</string>
    <string name="price">4.99</string>
    <string name="title_activity_maps">Map</string>
    <string name="ApiKey">AIzaSyBM_WmtsDDeCeZy6MhLxYNInR9lqCJ-Hf8</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_new_account">Register new Account</string>
    <string name="reserve_property">Reserve Property</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="rating_goes_here">RATING GOES HERE</string>
    <string name="price_goes_here">PRICE GOES HERE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="are_you_a_land_owner">Are you a Land Owner?</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="cancel">Cancel</string>
    <string name="property_name_goes_here">PROPERTY NAME GOES HERE</string>
    <string name="description_goes_here">DESCRIPTION GOES HERE</string>
    <string name="address_goes_here">ADDRESS GOES HERE</string>
    <string name="city_goes_here">CITY GOES HERE</string>
    <string name="state_goes_here">STATE GOES HERE</string>
    <string name="_15999_jewell_ave">15999 Jewell Ave</string>
    <string name="title">Title</string>
    <string name="this_great_camping_spot_is_full_of_trees_and_bugs_that_bite_not_to_mention_wild_animals_trust_me_you_will_love_it">this great camping spot is full of trees and bugs that bite. Not to mention wild animals. Trust me! You will love it!</string>
    <string name="add_property">Add Property</string>
    <string name="property_name">Property Name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="add_new_property">Add New Property</string>
    <string name="state">State</string>
    <string name="_price">Price</string>
    <string name="rating">Rating</string>
    <string name="see_on_map">See On Map</string>
    <string name="sort">Sort</string>
    <string name="sign_out">Sign Out</string>
    <string name="image_url_optional">Image URL (Optional)</string>
</resources>
