...
    android:padding="16dp"
    tools:context=".ui.controllers.RegisterController"
    android:id="@+id/root_layout_register"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_first_name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
...
            android:hint="@string/first_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_last_name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
...
            android:hint="@string/last_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
...
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:counterEnabled="true"
        app:counterMaxLength="12"
...
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:counterEnabled="true"
        app:counterMaxLength="12"
...
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_register_land_owner"
        app:layout_constraintStart_toStartOf="@id/text_input_password_register"
        app:layout_constraintTop_toBottomOf="@id/text_input_password_register"
        android:text="@string/are_you_a_land_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_register_create"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/complete_registration"
...
