<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.controllers.LoginController">


    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/green_camper_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_username"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_app_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_input_password"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_username"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:padding="16dp"
        android:background="@drawable/ripple"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_password" />

    <Button
        android:padding="16dp"
        android:id="@+id/btn_register"
        android:background="@drawable/ripple"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:text="@string/register_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"/>

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="88dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.scwang.wave.MultiWaveHeader

        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:mwhCloseColor="@color/colorAccent"
        app:mwhStartColor="@color/colorAccent"
        app:mwhWaves="
            70,25,1.4,1.4,-26
            100,5,1.4,1.2,15
            420,0,1.15,1,-10
            520,10,1.7,1.5,20
            220,0,1,1,-15" />


</androidx.constraintlayout.widget.ConstraintLayout>
